# mumble-video

./: CMakeLists.txt  LICENSE
.github/workflows/: cd.yml  ci.yml
res/: test_png_64x64.c  test_png_64x64.png.c
src/: CMakeLists.txt  dummy_send_img_video.cpp  queue.hpp  sdl_main_test.cpp  video-main.cpp
